--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -15,9 +16,21 @@ html {
  */
 
 body {
+  height: 100%;
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+main {
+  height: 100%;
+  width: 450px;
+  background-color: white;
+  margin: auto;
+  margin-top: 3em;
+  border-radius: 4px;
+  overflow: auto;
+  position: relative;
 }
 
 /*
