Used event delegation to alert Tweet when a tweet is clicked

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,14 +23,12 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 main {
-  height: 100%;
   width: 450px;
   background-color: white;
   margin: auto;
+  padding-top: 0.2em;
   margin-top: 3em;
   border-radius: 4px;
-  overflow: auto;
-  position: relative;
 }
 
 /*
