--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,7 @@
 .new-tweet{
   border-radius: 4px;
   background-color: #eaeaea;
-  padding: 0 1em 0 1em;
+  padding: 1em 1em 0 1em;
   margin: 2em;
   display: block;
   border: 1px solid #bcbcbc;
